Added some missing events and tests