@@ -3,12 +3,14 @@ package dev.getelements.elements.stripe.event;
 import dev.getelements.elements.sdk.Event;
 import dev.getelements.elements.stripe.StripeEvents;
 
+import java.util.Arrays;
 import java.util.List;
 
 public record StripeSubscriptionUpdatedEvent(
         String subscriptionId,
         String customerId,
-        String status) implements Event {
+        String status,
+        String orgId) implements Event {
 
     @Override
     public String getEventName() {
@@ -17,7 +19,7 @@ public record StripeSubscriptionUpdatedEvent(
 
     @Override
     public List<Object> getEventArguments() {
-        return List.of(subscriptionId, customerId, status);
+        return Arrays.asList(subscriptionId, customerId, status, orgId);
     }
 
 }
